Fixed z-index issues

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,7 +23,7 @@ $error: #f00;
 
 $font-normal: Lato;//, sans-serif;
 
-$on-top: 1000000; // z-index value
+$on-top: 2147483610; // z-index value
 
 
 $main-bg: 'img/bg.png';
